--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ts-node": "ts-node",
     "tsc": "tsc",
     "clean:tsc": "rm tsconfig.tsbuildinfo",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "npm test -- --watchAll"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
     "@swc/core": "^1.2.145",
     "@swc/jest": "^0.2.20",
     "@types/jest": "^27.4.1",
+    "@types/lodash": "^4.14.179",
     "@types/node": "^17.0.21",
     "jest": "^27.5.1",
     "ts-node": "^10.5.0",
