--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "@types/jest": "^27.4.1",
     "@types/lodash": "^4.14.179",
     "@types/node": "^17.0.21",
+    "@types/uuid": "^8.3.4",
     "jest": "^27.5.1",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "uuid": "^8.3.2"
   }
 }
